Bug fixes to the display of query & tags (previously not readable if overflows occurred), and CSS changes to view documentation

--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -13,7 +13,7 @@ p {
     -moz-box-shadow: 0 4px 2px -2px #808080;
     box-shadow: 0 4px 2px -2px #000000;
 	background-color: #707070;
-	padding: 11px;
+	padding: 12px;
 }
 
 /*The boxes*/
